--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -11,7 +11,7 @@
     <!-- css -->
     <link rel="stylesheet" href="/src/assets/css/style.css" />
   </head>
-  <body class="light">
+  <body class="light" class="fullScreen">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
