--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -11,8 +11,8 @@
     <!-- css -->
     <link rel="stylesheet" href="/src/assets/css/style.css" />
   </head>
-  <body class="light" class="fullScreen">
-    <div id="root"></div>
+  <body class="light">
+    <div id="root" class="fullScreen"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
