--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -9,10 +9,10 @@
     <!-- <link rel="manifest" href="/src/manifest.json" /> -->
     <title>Toys</title>
     <!-- css -->
-    <link rel="stylesheet" href="/src/assets/css/style.css" />
+    <link rel="stylesheet" href="./src/assets/css/style.css" />
   </head>
   <body class="light">
     <div id="root" class="fullScreen"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
