--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="./src/assets/img/icon.png" />
+    <link rel="icon" href="./src/public/img/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Toys of KiaClouth" />
@@ -13,6 +13,7 @@
   </head>
   <body class="light">
     <div id="root" class="fullScreen"></div>
+    <!-- <script>globalThis.global = globalThis</script> -->
     <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
